--- a/DevelopmentProject/app/src/main/res/values/strings.xml
+++ b/DevelopmentProject/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">DevelopmentProject</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="navigation_open">Open drawer</string>
+    <string name="navigation_close">Close drawer</string>
+    <string name="open_drawer">Open navigation drawer</string>
 </resources>
